:lipstick: style:fix layout issues

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -81,7 +81,7 @@ h2 {
 p {
   margin-top: 2rem;
  font-family: 'clean-ui', sans-serif;
-  font-size: 1.5rem
+  font-size: 1.6rem
   // letter-spacing: .05em;
 
 }
